--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 APScheduler==3.11.0
 beautifulsoup4==4.12.3
+bleach==6.2.0
 blinker==1.9.0
 certifi==2024.12.14
 charset-normalizer==3.4.1
@@ -7,6 +8,7 @@ click==8.1.8
 dnspython==2.7.0
 email_validator==2.2.0
 feedparser==6.0.11
+filelock==3.17.0
 Flask==3.1.0
 Flask-Login==0.6.3
 flask-paginate==2024.4.12
@@ -21,12 +23,15 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
 requests==2.32.3
+requests-file==2.1.0
 sgmllib3k==1.0.0
 six==1.17.0
 soupsieve==2.6
 SQLAlchemy==2.0.37
+tldextract==5.1.3
 typing_extensions==4.12.2
 tzlocal==5.2
 urllib3==2.3.0
+webencodings==0.5.1
 Werkzeug==3.1.3
 WTForms==3.2.1
